--- a/styles/styleStudents.css
+++ b/styles/styleStudents.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 :root {
     --primary: #57B9FF;
     --primary-light: #e8eeff;
@@ -18,7 +20,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Outfit' , sans-serif;
 }
 
 body {
